<resources>
    <string name="app_name">kickboxing</string>
    <string name="menuHome">Home</string>
    <string name="tvPay"> Pay for a class</string>
    <string name="viewSchedule">View Schedule</string>
    <string name="title_activity_pay_screen">PayScreen</string>
    <string name="payButton"> Pay </string>
    <string name="paypal"> PayPal</string>
    <string name="direct"> Direct Debit</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuPaid">Pay</string>
    <string name="amount"> Amount</string>
    <string name="total"> Total so far</string>
    <string name="totalSoFar"> $ Total</string>
    <string name="btn_pay_des">Takes you to the home screen</string>
    <string name="btn_schedule_des">takes you to the schedule page</string>
    <string name="tv_Kids">Kids : €8</string>
    <string name="tv_Teens">Teens = €10</string>
    <string name="tv_Adults"> Adults = €12</string>
    <string name="Group">Group(age)</string>
    <string name="Kids">Kids(7-12)</string>
    <string name="teens">Teens(13-17)</string>
    <string name="adults">Adults(18+)</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat_sun">Sat/Sun</string>
    <string name="Amount">Amount so far:</string>
    <string name="tv_Report">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>

</resources>
