<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.dynamickickboxing.kickboxing.ViewSchedule"
    tools:showIn="@layout/activity_view_schedule">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="378dp"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Group" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kids"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teens"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adults"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            app:layout_column="3"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            app:layout_column="4"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            app:layout_column="5"
            app:layout_row="0" />

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>
