<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.dynamickickboxing.kickboxing.HomeScreen">
    <item
        android:id="@+id/menuHome"
        android:orderInCategory="100"
        android:title="@string/menuHome"
        app:showAsAction="never"
        android:onClick="homescreen"
        />

    <item
        android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        app:showAsAction="never"
        android:onClick="report"
        />


    <item
        android:id="@+id/menuPaid"
        android:orderInCategory="100"
        android:title="@string/menuPaid"
        app:showAsAction="never"
        android:onClick="pay"
        />

    <item
        android:id="@+id/menuReset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menuReset"
        android:onClick="reset"/>

</menu>
